chore: hygen container w/ tests boilerplate

--- a/_templates/component-generator/with-prompt/component.ejs
+++ b/_templates/component-generator/with-prompt/component.ejs
@@ -12,6 +12,7 @@ const <%= name %>: React.FC<Props> = ({}) => {
 
   return (
     <View
+      testID="<%= name %>TestID"
       style={[
         Layout.fill,
         Layout.colCenter,
