--- a/_templates/container-generator/with-prompt/component.ejs
+++ b/_templates/container-generator/with-prompt/component.ejs
@@ -15,6 +15,7 @@ const <%= name %>Container = () => {
 
   return (
     <SafeAreaView
+    testID="<%= name %>TestID"
       style={[
         Layout.fill,
         Layout.colHCenter,
