--- a/_templates/container-generator/with-prompt/component.ejs
+++ b/_templates/container-generator/with-prompt/component.ejs
@@ -1,37 +1,24 @@
 ---
-to: src/Containers/<%= name %>/<%= name %>Container.tsx
+to: src/containers/<%= name %>/<%= name %>-container.tsx
 ---
 import React from 'react'
-import { useTheme } from '@/Hooks'
 import { SafeAreaView } from 'react-native-safe-area-context'
 import {
-  StyleSheet,
   Text,
   View,
 } from 'react-native'
 
-const <%= name %>Container = () => {
-  const { Layout, Colors, Fonts } = useTheme()
+const <%= h.changeCase.pascal(name) %>Container = () => {
 
   return (
     <SafeAreaView
-    testID="<%= name %>TestID"
-      style={[
-        Layout.fill,
-        Layout.colHCenter,
-        styles.globalContainer,
-        { backgroundColor: Colors.white },
-      ]}
+    testID="<%= h.changeCase.pascal(name) %>TestID"
     >
-    <Text style={[Fonts.textRegular, { color: Colors.text }]}>
+    <Text>
       My container
     </Text>
     </SafeAreaView>
   )
 }
 
-const styles = StyleSheet.create({
-  globalContainer: {}
-})
-
-export default <%= name %>Container
+export default <%= h.changeCase.pascal(name) %>Container
