--- a/_templates/component-generator/with-prompt/script.ejs
+++ b/_templates/component-generator/with-prompt/script.ejs
@@ -1,3 +1,3 @@
 ---
- sh: "echo $'export { default as <%= name %> } from \"./<%= path %>/<%= name %>\"'  >> ./src/Components/index.ts"
+ sh: "echo $'export { default as <%= h.changeCase.pascal(name) %> } from \"./<%=  h.changeCase.lower(path) %>/<%=  h.changeCase.lower(name) %>\"'  >> ./src/components/index.ts"
 ---
