--- a/_templates/container-generator/with-prompt/script.ejs
+++ b/_templates/container-generator/with-prompt/script.ejs
@@ -1,3 +1,3 @@
 ---
- sh: "echo $'export { default as <%= name %>Container } from \"./<%= name %>/<%= name %>Container\"'  >> ./src/Containers/index.ts"
+ sh: "echo $'export { default as <%= h.changeCase.pascal(name) %>Container } from \"./<%= name %>/<%= name %>-container\"'  >> ./src/containers/index.ts"
 ---
